src/main/java/antlr/gen/MiniSQLParser.java
// Generated from D:/IDEA programming/MiniSQL/src/main/resources\MiniSQL.g4 by ANTLR 4.7
package antlr.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CREATE=1, DATABASE=2, DROP=3, IF=4, EXISTS=5, SCHEMA=6, FROM=7, WHERE=8, 
		ASC=9, DESC=10, INTO=11, DEFAULT=12, TABLE=13, PRIMARY_SYM=14, KEY_SYM=15, 
		ON=16, UNIQUE_SYM=17, INDEX_SYM=18, SELECT_SYM=19, DELETE_SYM=20, INSERT_SYM=21, 
		UPDATE_SYM=22, ORDER_SYM=23, BY_SYM=24, SET_SYM=25, VALUE_SYM=26, VALUES=27, 
		NULL_SYM=28, INT_SYM=29, CHAR=30, INTEGER_SYM=31, FLOAT_SYM=32, DIVIDE=33, 
		MOD_SYM=34, OR_SYM=35, AND_SYM=36, NOT_SYM=37, XOR_SYM=38, UNION_SYM=39, 
		ARROW=40, EQ_SYM=41, NOT_EQ=42, LET=43, LTH=44, GET=45, GTH=46, SET_VAR=47, 
		ALL_FIELDS=48, SEMI=49, COLON=50, DOT=51, COMMA=52, ASTERISK=53, RPAREN=54, 
		LPAREN=55, RBRACK=56, LBRACK=57, PLUS=58, MINUS=59, NEGATION=60, BITWISE=61, 
		BITAND=62, POWER_OP=63, INTEGER_NUM=64, REAL_NUM=65, TEXT_STRING=66, ID=67, 
		WHITE_SPACE=68, SL_COMMENT=69, ML_COMMENT=70;
	public static final int
		RULE_relational_op = 0, RULE_string_literal = 1, RULE_number_literal = 2, 
		RULE_literal_value = 3, RULE_schema_name = 4, RULE_table_name = 5, RULE_column_name = 6, 
		RULE_index_name = 7, RULE_expression = 8, RULE_exp_factor1 = 9, RULE_exp_factor2 = 10, 
		RULE_exp_factor3 = 11, RULE_exp_factor4 = 12, RULE_bit_expr = 13, RULE_factor1 = 14, 
		RULE_factor2 = 15, RULE_simple_expr = 16, RULE_column_spec = 17, RULE_table_spec = 18, 
		RULE_column_list = 19, RULE_root_statement = 20, RULE_data_manipulation_statements = 21, 
		RULE_data_definition_statements = 22, RULE_select_statement = 23, RULE_where_clause = 24, 
		RULE_orderby_clause = 25, RULE_orderby_item = 26, RULE_select_list = 27, 
		RULE_displayed_column = 28, RULE_delete_statement = 29, RULE_insert_statement = 30, 
		RULE_value_list_clause = 31, RULE_column_value_list = 32, RULE_update_statement = 33, 
		RULE_set_columns_clause = 34, RULE_set_column_clause = 35, RULE_create_database_statement = 36, 
		RULE_drop_database_statement = 37, RULE_create_table_statement = 38, RULE_create_definition = 39, 
		RULE_null_or_notnull = 40, RULE_length = 41, RULE_column_data_type_header = 42, 
		RULE_drop_table_statement = 43, RULE_create_index_statement = 44, RULE_drop_index_statement = 45;
	public static final String[] ruleNames = {
		"relational_op", "string_literal", "number_literal", "literal_value", 
		"schema_name", "table_name", "column_name", "index_name", "expression", 
		"exp_factor1", "exp_factor2", "exp_factor3", "exp_factor4", "bit_expr", 
		"factor1", "factor2", "simple_expr", "column_spec", "table_spec", "column_list", 
		"root_statement", "data_manipulation_statements", "data_definition_statements", 
		"select_statement", "where_clause", "orderby_clause", "orderby_item", 
		"select_list", "displayed_column", "delete_statement", "insert_statement", 
		"value_list_clause", "column_value_list", "update_statement", "set_columns_clause", 
		"set_column_clause", "create_database_statement", "drop_database_statement", 
		"create_table_statement", "create_definition", "null_or_notnull", "length", 
		"column_data_type_header", "drop_table_statement", "create_index_statement", 
		"drop_index_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "'=>'", null, null, "'<='", "'<'", "'>='", "'>'", 
		"'='", "'.*'", "';'", "':'", "'.'", "','", "'*'", "')'", "'('", "']'", 
		"'['", "'+'", "'-'", "'~'", "'|'", "'&'", "'^'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CREATE", "DATABASE", "DROP", "IF", "EXISTS", "SCHEMA", "FROM", 
		"WHERE", "ASC", "DESC", "INTO", "DEFAULT", "TABLE", "PRIMARY_SYM", "KEY_SYM", 
		"ON", "UNIQUE_SYM", "INDEX_SYM", "SELECT_SYM", "DELETE_SYM", "INSERT_SYM", 
		"UPDATE_SYM", "ORDER_SYM", "BY_SYM", "SET_SYM", "VALUE_SYM", "VALUES", 
		"NULL_SYM", "INT_SYM", "CHAR", "INTEGER_SYM", "FLOAT_SYM", "DIVIDE", "MOD_SYM", 
		"OR_SYM", "AND_SYM", "NOT_SYM", "XOR_SYM", "UNION_SYM", "ARROW", "EQ_SYM", 
		"NOT_EQ", "LET", "LTH", "GET", "GTH", "SET_VAR", "ALL_FIELDS", "SEMI", 
		"COLON", "DOT", "COMMA", "ASTERISK", "RPAREN", "LPAREN", "RBRACK", "LBRACK", 
		"PLUS", "MINUS", "NEGATION", "BITWISE", "BITAND", "POWER_OP", "INTEGER_NUM", 
		"REAL_NUM", "TEXT_STRING", "ID", "WHITE_SPACE", "SL_COMMENT", "ML_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Relational_opContext extends ParserRuleContext {
		public TerminalNode EQ_SYM() { return getToken(MiniSQLParser.EQ_SYM, 0); }
		public TerminalNode NOT_EQ() { return getToken(MiniSQLParser.NOT_EQ, 0); }
		public TerminalNode LTH() { return getToken(MiniSQLParser.LTH, 0); }
		public TerminalNode GTH() { return getToken(MiniSQLParser.GTH, 0); }
		public TerminalNode LET() { return getToken(MiniSQLParser.LET, 0); }
		public TerminalNode GET() { return getToken(MiniSQLParser.GET, 0); }
		public Relational_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relational_op; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniSQLVisitor ) return ((MiniSQLVisitor<? extends T>)visitor).visitRelational_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Relational_opContext relational_op() throws RecognitionException {
		Relational_opContext _localctx = new Relational_opContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_relational_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ_SYM) | (1L << NOT_EQ) | (1L << LET) | (1L << LTH) | (1L << GET) | (1L << GTH))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_literalContext extends ParserRuleContext {
		public TerminalNode TEXT_STRING() { return getToken(MiniSQLParser.TEXT_STRING, 0); }
		public String_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_literal; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniSQLVisitor ) return ((MiniSQLVisitor<? extends T>)visitor).visitString_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final String_literalContext string_literal() throws RecognitionException {
		String_literalContext _localctx = new String_literalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_string_literal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(TEXT_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Number_literalContext extends ParserRuleContext {
		public TerminalNode INTEGER_NUM() { return getToken(MiniSQLParser.INTEGER_NUM, 0); }
		public TerminalNode REAL_NUM() { return getToken(MiniSQLParser.REAL_NUM, 0); }
		public TerminalNode PLUS() { return getToken(MiniSQLParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(MiniSQLParser.MINUS, 0); }
		public Number_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number_literal; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniSQLVisitor ) return ((MiniSQLVisitor<? extends T>)visitor).visitNumber_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Number_literalContext number_literal() throws RecognitionException {
		Number_literalContext _localctx = new Number_literalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_number_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PLUS || _la==MINUS) {
				{
				setState(96);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(99);
			_la = _input.LA(1);
			if ( !(_la==INTEGER_NUM || _la==REAL_NUM) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Literal_valueContext extends ParserRuleContext {
		public String_literalContext string_literal() {
			return getRuleContext(String_literalContext.class,0);
		}
		public Number_literalContext number_literal() {
			return getRuleContext(Number_literalContext.class,0);
		}
		public TerminalNode NULL_SYM() { return getToken(MiniSQLParser.NULL_SYM, 0); }
		public Literal_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal_value; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniSQLVisitor ) return ((MiniSQLVisitor<? extends T>)visitor).visitLiteral_value(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Literal_valueContext literal_value() throws RecognitionException {
		Literal_valueContext _localctx = new Literal_valueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_literal_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TEXT_STRING:
				{
				setState(101);
				string_literal();
				}
				break;
			case PLUS:
			case MINUS:
			case INTEGER_NUM:
			case REAL_NUM:
				{
				setState(102);
				number_literal();
				}
				break;
			case NULL_SYM:
				{
				setState(103);
				match(NULL_SYM);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Schema_nameContext extends ParserRuleContext {
		public Token tmpName;
		public TerminalNode ID() { return getToken(MiniSQLParser.ID, 0); }
		public Schema_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniSQLVisitor ) return ((MiniSQLVisitor<? extends T>)visitor).visitSchema_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Schema_nameContext schema_name() throws RecognitionException {
		Schema_nameContext _localctx = new Schema_nameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_schema_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			((Schema_nameContext)_localctx).tmpName = match(ID);
			if(((Schema_nameContext)_localctx).tmpName.getText().length() <= 64) System.out.println("schema name = " + ((Schema_nameContext)_localctx).tmpName.getText() + " \n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_nameContext extends ParserRuleContext {
		public Token tmpName;
		public TerminalNode ID() { return getToken(MiniSQLParser.ID, 0); }
		public Table_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniSQLVisitor ) return ((MiniSQLVisitor<? extends T>)visitor).visitTable_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Table_nameContext table_name() throws RecognitionException {
		Table_nameContext _localctx = new Table_nameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_table_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			((Table_nameContext)_localctx).tmpName = match(ID);
			if(((Table_nameContext)_localctx).tmpName.getText().length() <= 64) System.out.println("table name = " + ((Table_nameContext)_localctx).tmpName.getText() + " \n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Column_nameContext extends ParserRuleContext {
		public Token tmpName;
		public TerminalNode ID() { return getToken(MiniSQLParser.ID, 0); }
		public Column_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniSQLVisitor ) return ((MiniSQLVisitor<? extends T>)visitor).visitColumn_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Column_nameContext column_name() throws RecognitionException {
		Column_nameContext _localctx = new Column_nameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_column_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			((Column_nameContext)_localctx).tmpName = match(ID);
			if(((Column_nameContext)_localctx).tmpName.getText().length() <= 64) System.out.println("column name = " + ((Column_nameContext)_localctx).tmpName.getText() + " \n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Index_nameContext extends ParserRuleContext {
		public Token tmpName;
		public TerminalNode ID() { return getToken(MiniSQLParser.ID, 0); }
		public Index_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniSQLVisitor ) return ((MiniSQLVisitor<? extends T>)visitor).visitIndex_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Index_nameContext index_name() throws RecognitionException {
		Index_nameContext _localctx = new Index_nameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_index_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			((Index_nameContext)_localctx).tmpName = match(ID);
			if(((Index_nameContext)_localctx).tmpName.getText().length() <= 64) System.out.println("index name = " + ((Index_nameContext)_localctx).tmpName.getText() + " \n");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public List<Exp_factor1Context> exp_factor1() {
			return getRuleContexts(Exp_factor1Context.class);
		}
		public Exp_factor1Context exp_factor1(int i) {
			return getRuleContext(Exp_factor1Context.class,i);
		}
		public List<TerminalNode> OR_SYM() { return getTokens(MiniSQLParser.OR_SYM); }
		public TerminalNode OR_SYM(int i) {
			return getToken(MiniSQLParser.OR_SYM, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniSQLVisitor ) return ((MiniSQLVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			exp_factor1();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR_SYM) {
				{
				{
				setState(119);
				match(OR_SYM);
				setState(120);
				exp_factor1();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp_factor1Context extends ParserRuleContext {
		public List<Exp_factor2Context> exp_factor2() {
			return getRuleContexts(Exp_factor2Context.class);
		}
		public Exp_factor2Context exp_factor2(int i) {
			return getRuleContext(Exp_factor2Context.class,i);
		}
		public List<TerminalNode> XOR_SYM() { return getTokens(MiniSQLParser.XOR_SYM); }
		public TerminalNode XOR_SYM(int i) {
			return getToken(MiniSQLParser.XOR_SYM, i);
		}
		public Exp_factor1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_factor1; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniSQLVisitor ) return ((MiniSQLVisitor<? extends T>)visitor).visitExp_factor1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Exp_factor1Context exp_factor1() throws RecognitionException {
		Exp_factor1Context _localctx = new Exp_factor1Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_exp_factor1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			exp_factor2();
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==XOR_SYM) {
				{
				{
				setState(127);
				match(XOR_SYM);
				setState(128);
				exp_factor2();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exp_factor2Context extends ParserRuleContext {
		public List<Exp_factor3Context> exp_factor3() {
			return getRuleContexts(Exp_factor3Context.class);
		}
		public Exp_factor3Context exp_factor3(int i) {
